--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
           </div>
         </div>
         <div class="col-md-9">
-			<ul class="nav nav-tabs">
-			  <li class="active"><a data-toggle="tab" href="#chat">Live Chat</a></li>
-			  <li><a data-toggle="tab" href="#camera">Workspace Camera</a></li>
-			  <li><a data-toggle="tab" href="#sound">Message recording</a></li>
+			<ul class="nav nav-tabs">			  
+				<li><a data-toggle="tab" href="#sound">Message recording</a></li>
+			  <li class="active"><a data-toggle="tab" href="#camera">Workspace Camera</a></li>
+			  <li><a data-toggle="tab" href="#chat">Live Chat</a></li>
 			</ul>
 			<div class="tab-content">
 			  <div id="chat" class="tab-pane fade in active">
