--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         </div>
         <div class="col-md-9">
 			<ul class="nav nav-tabs">			  
-				<li><a data-toggle="tab" href="#sound">Message recording</a></li>
-			  <li class="active"><a data-toggle="tab" href="#camera">Workspace Camera</a></li>
+				<li  class="active"><a data-toggle="tab" href="#sound">Message recording</a></li>
+			  <li><a data-toggle="tab" href="#camera">Workspace Camera</a></li>
 			  <li><a data-toggle="tab" href="#chat">Live Chat</a></li>
 			</ul>
 			<div class="tab-content">
