--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
 		.vjs-using-native-controls .vjs-control-bar {
 			display: flex !important;
 		}
+		  /* change player background color */
+		  #myVideo {
+			  background-color: #E8E884;
+		  }
     </style>
 	<link href="https://vjs.zencdn.net/5.9.2/video-js.min.css" rel="stylesheet">
+	 <link href="./css/videojs.record.min.css" rel="stylesheet">
 	<script src="https://vjs.zencdn.net/5.9.2/video.min.js"></script>
 	<script src="https://cdn.webrtc-experiment.com/RecordRTC.js"></script>
     <script src="https://cdn.webrtc-experiment.com/gif-recorder.js"></script>
