--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
 var player = videojs("myVideo",
 {
     controls: true,
-    width: 320,
-    height: 240,
+    width: 640,
+    height: 480,
     plugins: {
         record: {
             audio: true,
             video: true,
-            maxLength: 10,
+            maxLength: 240,
             debug: true
         }
     }
@@ -210,7 +210,7 @@ player.on('deviceError', function()
 // user clicked the record button and started recording
 player.on('startRecord', function()
 {
-    console.log('started recording!');
+    window.open(player.recordedData);
 });
 
 // user completed recording and stream is available
