--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="navbar-collapse collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav navbar-right">     
 
-          <li><a href="">Export</a></li>
+          <li><a href="./owncloud/">File repository</a></li>
           <li><a href="">Monitoring Dashboard</a></li>
           
           <li class="dropdown">
@@ -172,7 +172,7 @@
 			  <div id="chat" class="tab-pane fade">
 				<p>
 				    <div class="embed-responsive">
-					  <!--<iframe class="embed-responsive-item" src="https://192.168.11.20/"></iframe>-->
+					  <iframe class="embed-responsive-item" src="https://54.170.250.252/"></iframe>
 					</div>
 				</p>
 			  </div>
