--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 			  <div id="chat" class="tab-pane fade">
 				<p>
 				    <div class="embed-responsive">
-					  <iframe class="embed-responsive-item" src="https://54.170.250.252/"></iframe>
+					  <iframe class="embed-responsive-item" src="https://54.195.19.23"></iframe>
 					</div>
 				</p>
 			  </div>
