--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
 			<div class="tab-content">
 			  <div id="chat" class="tab-pane fade">
 				<p>
-				    <div class="embed-responsive">
-					  <iframe class="embed-responsive-item" src="https://54.195.19.23"></iframe>
+				    <div class="embed-responsive embed-responsive-16by9">
+					  <iframe class="embed-responsive-item" src="https://54.195.19.23/"></iframe>
 					</div>
 				</p>
 			  </div>
