--- a/operatorInterface.html
+++ b/operatorInterface.html
@@ -62,7 +62,7 @@
             background-color: #E8E884;
         }
     </style>
-    <link href="http://vjs.zencdn.net/5.16.0/video-js.css" rel="stylesheet">
+    <link href="https://vjs.zencdn.net/5.16.0/video-js.css" rel="stylesheet">
     <link href="./css/videojs.record.min.css" rel="stylesheet">
     <script src="https://vjs.zencdn.net/5.9.2/video.min.js"></script>
     <script src="https://cdn.webrtc-experiment.com/RecordRTC.js"></script>
@@ -186,7 +186,7 @@
                     <div id="chat" class="tab-pane fade">
                         <p>
                             <div class="embed-responsive embed-responsive-16by9">
-                                <iframe class="embed-responsive-item" src="https://54.195.19.23/"></iframe>
+                                <!--<iframe class="embed-responsive-item" src="https://54.195.19.23/"></iframe>-->
                             </div>
                         </p>
                     </div>
@@ -197,7 +197,7 @@
                                 <br/>
                             </div>
                             <div class="embed-responsive embed-responsive-16by9">
-                                <iframe class="embed-responsive-item" src="https://ip-kamera01-ideko.danobatgroup.com/"></iframe>
+                                <!--<iframe class="embed-responsive-item" src="https://ip-kamera01-ideko.danobatgroup.com/"></iframe>-->
                             </div>
                         </p>
                     </div>
@@ -247,65 +247,6 @@
 
     <script src="./js/publishobservation.js"></script>
     <script src="./js/videoworkspace.js"></script>
-    <script>
-        function autoLogout() {
-            $.ajax({
-                url: "http://54.75.18.26:5984/_session",
-                xhrFields: {
-                    withCredentials: true,
-                },
-                type: "GET",
-                dataType: 'json',
-                complete: function (data, textStatus, jqXHR) {
-                    console.log(JSON.stringify(data));
-                    var c = JSON.parse(data.responseText);
-                    console.log();
-                    if (c.userCtx.name == null) {
-                        window.location.replace("./index.html");
-                    } else {
-                        $("#user").html(c.userCtx.name + "<b class='caret'></b>");
-                    }
-                },
-                error: function (jqXHR, textStatus, errorThrown) {
-                    console.log(textStatus + ' :: ' + errorThrown + ' :: ' + JSON.stringify(jqXHR));
-                }
-            });
-        }
-
-
-        function logout() {
-            $.ajax({
-                url: "http://54.75.18.26:5984/_session",
-                xhrFields: {
-                    withCredentials: true,
-                },
-                beforeSend: function (xhr) {
-                    xhr.setRequestHeader('Authorization', "Basic " + btoa("test:test"));
-                },
-                type: "DELETE",
-                dataType: 'json',
-                contentType: "application/json",
-                complete: function (data, textStatus, jqXHR) {
-                    console.log(JSON.stringify(data));
-                },
-                error: function (jqXHR, textStatus, errorThrown) {
-                    console.log(textStatus + ' :: ' + errorThrown + ' :: ' + JSON.stringify(jqXHR));
-                }
-            });
-        }
-
-
-
-
-        $("#logout").click(function () {
-            logout();
-            window.location.replace("./index.html");
-        });
-
-        $(document).ready(function () {
-            autoLogout();
-        });
-    </script>
 </body>
 
 </html>
